remove costs & weight from node

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 ﻿index_old1.html
 test.html
 create_species_list.py
+node_modules
+icons/png
+create-atlas.js
+package.json
+package-lock.json
+icons/dds
+icons
